--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,7 @@
     width: 340px;
     height: 250px;
     border-radius: 12px;
+    /* padding-right: 10px; */
 }
 
 .modal-head{
@@ -46,7 +47,16 @@
     border-radius: 50%;
 }
 
-/* .accuracy-container{
-    text-align: center;
+.modal-text-container{
+    border: 1px solid #EB5757;
+    border-radius: 8px;
+    padding: 12px 16px;
+    background-color: #faecec;
+}
 
-} */
+.modal-img-container{
+    border: 1px solid #d7d7d7;
+    border-radius: 8px;
+    padding: 12px 16px;
+    background-color: #ffffff;
+}
