--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,7 @@
     border: 1px solid #EB5757;
     border-radius: 8px;
     padding: 12px 16px;
-    background-color: #faecec;
+    background-color: #fff1f1;
 }
 
 .modal-img-container{
@@ -63,17 +63,39 @@
 
 .price-container{
     display: flex;
-    gap: 20px;
+    gap: 10px;
     justify-content: space-between;
-    padding: 0px 16px;
+    padding: 0px 8px;
     margin: 24px 0px;
+
+}
+
+.price-div{   
+    width: 120px;
+    height: 100px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .price-container p{
     margin: 0px;
     text-align: center;
     /* width: 80px; */
-    font-weight: 600;
+    font-weight: 700;
+}
+
+.basic-price p{
+    color: #02db0d;
+}
+.pro-price p{
+    color: #F28927;
+}
+.enterprise-price p{
+    color: #EB5757;
 }
 
 .features-container{
