--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,7 +74,6 @@
     justify-content: space-between;
     padding: 0px 8px;
     margin: 24px 0px;
-
 }
 
 .price-div{   
@@ -151,11 +150,21 @@
     }
 
     .price-div{
-        padding: 0px 0px;
+        padding: 16px 0px;
+        width: 100%;
+        height: 100%;
     }
 
     .features-container ul li {
         font-size: 16px;
+    }
+
+    .price-container{
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+        padding: 0px 0px;
+        margin: 24px 0px;
     }
   
 }
